# first_web_app

./: Cargo.toml  stuff.txt
src/: data_structs.rs  file_parser.rs  fileparser.rs  main.rs  paths.rs
src/pages/: index.html  page_three.html  page_two.html  upload_file_page.html
