[package]
name = "first_web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.1"
actix-multipart = "0.6.1"
env_logger = "0.11.0"
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
futures-util = "0.3.30"
